Name:           muesli
Version:        0

License:        OtherLicense
License-file:   LICENSE


Build-Type:     Simple
Cabal-Version:  >= 1.2
Tested-With:    GHC == 7.10.1

Executable      Muesli
        Main-is:        Muesli.hs
        ghc-options:    -fno-warn-tabs
        Build-depends:
                        base >= 4 && < 5,
                        ansi-terminal >= 0.6.2.1 && < 0.7,
                        fixed-vector >= 0.8.1.0 && < 0.9
