Name:           muesli
Version:        0

License:        OtherLicense
License-file:   LICENSE


Build-Type:     Simple
Cabal-Version:  >= 1.2
Tested-With:    GHC == 8.4.3

Executable      Muesli
        Main-is:        Main.hs
        ghc-options:    -fno-warn-tabs
        other-modules:  Database, DatabaseTools, Types, Muesli
        Build-depends:
                        base >= 4 && < 5,
                        ansi-terminal >= 0.6.2.1 && < 0.7,
                        fixed-vector >= 1.1 && < 1.2
